fixing stock info alignment and picture rendering for home page componnent

--- a/src/App.css
+++ b/src/App.css
@@ -184,6 +184,13 @@ margin-right:10px;
   }
 
 
+  /* Random Page */
+/* .random{
+  display: none; 
+  block: none;
+} */
+
+
 .Footer{
   position: fixed;
   left: 0;
